trafficyaml/optTraffic/bookinfo/productpage-to-details-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-to-details-vs
  namespace: bookinfo
spec:
  hosts:
  - details
  http:
  - match:
    - sourceLabels:
        app: productpage
        version: productpage-1
    route:
    - destination:
        host: details
        subset: details-1
      weight: 50
    - destination:
        host: details
        subset: details-2
      weight: 50




  - match:
    - sourceLabels:
        app: productpage
        version: productpage-2
    route:
    - destination:
        host: details
        subset: details-1
      weight: 50
    - destination:
        host: details
        subset: details-2
      weight: 50
      


  - match:
    - sourceLabels:
        app: productpage
        version: productpage-3
    route:
    - destination:
        host: details
        subset: details-3
      weight: 62
    - destination:
        host: details
        subset: details-1
      weight: 12
    - destination:
        host: details
        subset: details-2
      weight: 13
    - destination:
        host: details
        subset: details-4
      weight: 13


  - match:
    - sourceLabels:
        app: productpage
        version: productpage-4
    route:
    - destination:
        host: details
        subset: details-3
      weight: 63
    - destination:
        host: details
        subset: details-1
      weight: 13
    - destination:
        host: details
        subset: details-2
      weight: 12
    - destination:
        host: details
        subset: details-4
      weight: 12


  - match:
    - sourceLabels:
        app: productpage
        version: productpage-5
    route:
    - destination:
        host: details
        subset: details-4
      weight: 100
