trafficyaml/optTraffic/bookinfo/productpage-to-reviews-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-to-reviews-vs
  namespace: bookinfo
spec:
  hosts:
  - reviews
  http:
  - match:
    - sourceLabels:
        app: productpage
        version: productpage-1
    route:
    - destination:
        host: reviews
        subset: reviews-1
      weight: 62
    - destination:
        host: reviews
        subset: reviews-3
      weight: 19
    - destination:
        host: reviews
        subset: reviews-4
      weight: 19      



  - match:
    - sourceLabels:
        app: productpage
        version: productpage-2
    route:
    - destination:
        host: reviews
        subset: reviews-1
      weight: 63
    - destination:
        host: reviews
        subset: reviews-3
      weight: 18
    - destination:
        host: reviews
        subset: reviews-4
      weight: 19  
      
  - match:
    - sourceLabels:
        app: productpage
        version: productpage-3
    route:
    - destination:
        host: reviews
        subset: reviews-2
      weight: 62
    - destination:
        host: reviews
        subset: reviews-3
      weight: 19
    - destination:
        host: reviews
        subset: reviews-4
      weight: 19  


  - match:
    - sourceLabels:
        app: productpage
        version: productpage-4
    route:
    - destination:
        host: reviews
        subset: reviews-2
      weight: 63
    - destination:
        host: reviews
        subset: reviews-3
      weight: 19
    - destination:
        host: reviews
        subset: reviews-4
      weight: 18  


  - match:
    - sourceLabels:
        app: productpage
        version: productpage-5
    route:
    - destination:
        host: reviews
        subset: reviews-3
      weight: 50
    - destination:
        host: reviews
        subset: reviews-4
      weight: 50
