trafficyaml/optTraffic/bookinfo/reviews-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-dr
  namespace: bookinfo
spec:
  host: reviews
  subsets:
  - labels:
      version: reviews-3
    name: reviews-3
  - labels:
      version: reviews-2
    name: reviews-2
  - labels:
      version: reviews-1
    name: reviews-1
  - labels:
      version: reviews-4
    name: reviews-4
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
