trafficyaml/optTraffic/bookinfo/reviews-to-ratings-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-to-ratings-vs
  namespace: bookinfo
spec:
  hosts:
  - ratings
  http:
  - match:
    - sourceLabels:
        app: reviews
        version: reviews-1
    route:
    - destination:
        host: ratings
        subset: ratings-1
      weight: 50    
    - destination:
        host: ratings
        subset: ratings-2
      weight: 50

    
  - match:
    - sourceLabels:
        app: reviews
        version: reviews-2
    route:   
    - destination:
        host: ratings
        subset: ratings-3
      weight: 80
    - destination:
        host: ratings
        subset: ratings-1
      weight: 10
    - destination:
        host: ratings
        subset: ratings-2
      weight: 10            




  - match:
    - sourceLabels:
        app: reviews
        version: reviews-3
    route:  
    - destination:
        host: ratings
        subset: ratings-4
      weight: 40
    - destination:
        host: ratings
        subset: ratings-5
      weight: 40
    - destination:
        host: ratings
        subset: ratings-1
      weight: 10
    - destination:
        host: ratings
        subset: ratings-2
      weight: 10            



  - match:
    - sourceLabels:
        app: reviews
        version: reviews-4
    route:
    - destination:
        host: ratings
        subset: ratings-4
      weight: 40
    - destination:
        host: ratings
        subset: ratings-5
      weight: 40
    - destination:
        host: ratings
        subset: ratings-1
      weight: 10
    - destination:
        host: ratings
        subset: ratings-2
      weight: 10
